@@ -1,3 +1,6 @@
+  127 Luca Falavigna	2009-05-16
+      Add compatibility with pyinotify 0.8.6
+
   126 Luca Falavigna	2009-04-18
       Improve Contents module code
 
